# scrsit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: catalog_v2.md  generate_project_structure.py  generate_project_structure_v2.py
src/scrsit/: __init__.py
src/scrsit/core/: __init__.py  exceptions.py  plugin_manager.py
src/scrsit/core/config/: settings.py
src/scrsit/core/document/: __init__.py  base_document.py  chunk.py  formula.py  models.py  pdf_document.py  relationship.py  structured_content.py  table.py
src/scrsit/core/document/base/: __init__.py  chunk.py  document.py  element.py  entity.py  formula.py  link.py  ordered_list.py  picture.py  reference.py  relationship.py  structured_content.py  table.py
src/scrsit/core/interfaces/: __init__.py  base_analyzer.py  base_chunker.py  base_document_store.py  base_embedder.py  base_knowledge_provider.py  base_llm_provider.py  base_multimodal_provider.py  base_ocr_provider.py  base_parser.py  base_proposal_generator.py  base_reviewer.py  base_structured_store.py  base_vector_store.py
src/scrsit/core/persistence/: __init__.py  base_persistence.py
src/scrsit/core/utils/: __init__.py  helpers.py  logging.py
src/scrsit/core/workflows/: __init__.py  ingestion.py
src/scrsit/llm/: __init__.py  base_llm.py  config.py  huggingface_llm.py  ollama_llm.py  openai_llm.py
src/scrsit/plugins/parsers/pdf/: 2504.12565  README.md  __init__.py  config.py  exceptions.py  magic_pdf_test.py  parser.py
tests/core/document/: test_chunk.py  test_element.py  test_entity.py  test_formula.py  test_link.py  test_ordered_list.py  test_picture.py  test_reference.py  test_relationship.py  test_structured_content.py  test_table.py
