[project]
name = "scrsit"
version = "0.1.0"
description = "Smart(Intelligent) Customer Requirements Interpretation"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "Apache License Version 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "magic-pdf (>=1.2.2,<2.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "paddlepaddle (>=3.0.0,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "ultralytics (>=8.3.97,<9.0.0)",
    "doclayout-yolo (>=0.0.3,<0.0.4)",
    "pycocotools (>=2.0.8,<3.0.0)",
    "timm (>=1.0.15,<2.0.0)",
    "paddleocr (>=2.10.0,<3.0.0)",
    "struct-eqtable (>=0.3.3,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
priority = "supplemental"

